# pseudo-interpreter

./: LEARN.md  LICENSE.md  README.md  __main__.py  constants.py  input.txt  main.py  pyproject.toml
cambridgeScript/: __main__.py  classes.py  constants.py  expressions.py  parser.py  programs.py  syntax_tree.py  tokens.py  variables.py  visitors.py
cambridgeScript/interpreter/: interpreter.py  programs.py  variables.py
cambridgeScript/parser/: grammar.txt  lexer.py  parser.py  syntax_tree.py  tokens.py
cambridgeScript/syntax_tree/: __init__.py  expression.py  statement.py  syntax_tree.py  types.py  visitors.py
examples/: output.cbs
