[tool.poetry]
name = "pseudo-interpreter"
version = "0.0.1"
description = ""
license = "MIT"
authors = ["Daniel Gu <daniel.gu25@stu.dulwich.org>"]
readme = "README.md"
repository = "https://github.com/n0Oo0Oo0b/pseudo-interpreter"
documentation = "https://github.com/n0Oo0Oo0b/pseudo-interpreter/wiki"
packages = [{ include = "cambridgeScript" }]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
